syntax = "proto3";

option csharp_namespace = "Service.GrpcService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (usersReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message user {
   string Id = 1;
   string Name = 2; 
   string Email=3;
}
message  usersReply{
	repeated user  users=1;
} 
